test/tests/compiler/16_characters_and_strings/invalid_lex/unescaped_double_quote.plx
pub fn main(none) i32 {
    ptr: *char = "foo"bar"
    return 0
}
